# local_llm_researcher

./: .gitignore  LICENSE  config.yaml  env.yaml  faiss_index.idx  fix_null_indices.py  main.py  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: ci-environment.yaml  pytest_conda.yaml
data_pipeline/: arxiv_api.py  generate_embeddings.py  reprocess_images.py
data_pipeline/extract/: chunker.py  pdf_extractor.py  text_preprocessor.py
database/: arxiv_papers.db  faiss_index.py  faiss_search.py  fix_null_indices.py  sqlite_db.py
llm/: rag_pipeline.py
notebooks/: explore.ipynb  explore_rag.ipynb
papers/arxiv/images_backup_20250318_170257/: extracted_data.json
tests/: conftest.py  test_pdf_pipeline.py  test_text_preprocessor.py
tests/data_pipeline/: test_arxiv_api.py  test_e5_embedder.py
tests/data_pipeline/extract/: test_chunker.py
tests/database/: test_faiss_index.py  test_faiss_searcher.py  test_sqlite_db.py
tests/utils/: test_file_operations.py  test_pdf_operations.py
utils/: file_operations.py  pdf_operations.py
