[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summarize_research_papers"
version = "0.1.0"
description = "A tool for summarizing research papers"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "faiss-cpu",
    "transformers",
    "torch",
    "PyYAML",
    "arxiv",
    "pdf2image",
    "pytesseract",
]

[tool.setuptools]
packages = [
    "data_pipeline",
    "database",
    "utils",
    "llm",
]